introduce better fonts

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Perfect Colour</title>
+    <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div id="app"></div>
