add GA and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,18 @@
     <title>Perfect Colour</title>
     <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="./assets/favicon.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135053534-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-135053534-3');
+    </script>
   </head>
   <body>
     <div id="app"></div>
