migrate to vue 3 and use vite

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <title>Perfect Colour</title>
     <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="./assets/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.png" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135053534-3"></script>
     <script>
@@ -19,6 +19,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./index.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
